add separe folder for code and data in ML_practice week

--- a/ML_practice/week1/code/Simple_Linear_Regression.ipynb
+++ b/ML_practice/week1/code/Simple_Linear_Regression.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c74b0045",
+   "id": "bbb899ee",
    "metadata": {},
    "source": [
     "# DataFraming"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9054303",
+   "id": "e72fe48d",
    "metadata": {},
    "source": [
     "Read .csv data into a DataFrame"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ea9f136b",
+   "id": "d65be391",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0e9377d0",
+   "id": "728043af",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aa7a1828",
+   "id": "6d791a20",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "29428c4e",
+   "id": "2d2c5863",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "593a011b",
+   "id": "22d0fe2b",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65065859",
+   "id": "bdeaee7c",
    "metadata": {},
    "source": [
     "# Visualizing Dataset"
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a03b5da",
+   "id": "a05d37f3",
    "metadata": {},
    "source": [
     "Visualize relation between each pair of features"
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9365f92d",
+   "id": "c7e453d4",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed4263fa",
+   "id": "269c0582",
    "metadata": {},
    "source": [
     "# Calculate correlation between features of dataset"
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9cfcbe3c",
+   "id": "0eec87f6",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cac3f54a",
+   "id": "45f78385",
    "metadata": {},
    "source": [
     "# Top k most correlated pairs"
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cf1ca6dd",
+   "id": "e2c608ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "36b2fe16",
+   "id": "8567400d",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "504f7e1c",
+   "id": "30216103",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3271119",
+   "id": "143ac285",
    "metadata": {},
    "source": [
     "# Converting dataframes into NumPy Arrays"
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69e1152a",
+   "id": "e3f1576b",
    "metadata": {},
    "source": [
     "Machine Learning handle arrays not dataframes"
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "71fa34f6",
+   "id": "e2b3615e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d917aa47",
+   "id": "b0887c60",
    "metadata": {},
    "source": [
     "# Training the Model"
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6c8ab26",
+   "id": "8075e1ed",
    "metadata": {},
    "source": [
     "We are using Linear regression model as imported from sklearn library and then it's being trained on x and y (any 2 major axis of datasets)"
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "51b7061f",
+   "id": "d58481a0",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90faf88e",
+   "id": "f4cb3a56",
    "metadata": {},
    "source": [
     "# Mean Sqaured Error & R - Squared Value"
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c2a8407e",
+   "id": "48f6cfef",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "709e98cb",
+   "id": "1b97b660",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b988971f",
+   "id": "69595ebf",
    "metadata": {},
    "source": [
     "# Visualization"
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4c14b83",
+   "id": "751644d9",
    "metadata": {},
    "source": [
     "Visualize the dataset with the fit model using matplotlib."
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "97409440",
+   "id": "faddb283",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8df3d017",
+   "id": "f0705af6",
    "metadata": {},
    "source": [
     "# Prediction"
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b2db4fa",
+   "id": "f43b2dd1",
    "metadata": {},
    "source": [
     "We will predict the Brain weight by giving an input of Brain Size"
@@ -742,21 +742,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4edccc8b",
+   "execution_count": 28,
+   "id": "642b7849",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[852.43210003]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val = model.predict([ [2000] ] )\n",
+    "val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e7831783",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction Brain Wight by the model:\t 852.4321000282413 grams\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Prediction Brain Wight by the model:\\t',val[0,0], 'grams')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c34767e",
+   "id": "541e7cd5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print('Prediction Brain Wight by the model:\\t',val[], 'grams')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
