show precison, recall, f1 score in Logistic_Regression.ipynb

--- a/ML_practice/week1_ML_ Intro_and_supervised_learing/code/Logistic_Regression.ipynb
+++ b/ML_practice/week1_ML_ Intro_and_supervised_learing/code/Logistic_Regression.ipynb
@@ -1227,6 +1227,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.81      0.87      0.84       200\n",
+      "         1.0       0.77      0.68      0.72       128\n",
+      "\n",
+      "    accuracy                           0.80       328\n",
+      "   macro avg       0.79      0.77      0.78       328\n",
+      "weighted avg       0.79      0.80      0.79       328\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#displaying precision, recall and f1 scores\n",
+    "\n",
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(target_test,predictions))\n",
+    "\n",
+    "# https://en.wikipedia.org/wiki/Precision_and_recall"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
