--- a/Deep_Learning_practice/Week1/tensorflow_data_representation_overview.ipynb
+++ b/Deep_Learning_practice/Week1/tensorflow_data_representation_overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1040ab51",
+   "id": "b27b86f1",
    "metadata": {},
    "source": [
     "# Brief illustration of how data is stored in Neural Networks"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d7e096",
+   "id": "2dc23910",
    "metadata": {},
    "source": [
     "Scaler : 0 dimensional tensor"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cd0ca1f3",
+   "id": "61ac7285",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5ebe4980",
+   "id": "ec85a40b",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a7f8ae8",
+   "id": "21b4c55f",
    "metadata": {},
    "source": [
     "1 dimensional array : 1 dimensional tensor"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eb8b7922",
+   "id": "d59c2363",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ede7512",
+   "id": "47bda8e4",
    "metadata": {},
    "source": [
     "matrix or 2D array : 2 dimensional tensor"
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ceb072ec",
+   "id": "d0e2b7ab",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5f47beee",
+   "id": "2899a3c0",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "375d7757",
+   "id": "5f72e85f",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "daf6b2c8",
+   "id": "578c2e0f",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4ca9fb2c",
+   "id": "d080aa2e",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1fc67cb8",
+   "id": "eba8bd4d",
    "metadata": {},
    "outputs": [
     {
@@ -277,9 +277,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "416c6c2c",
+   "metadata": {},
+   "source": [
+    "convert tensor object to numpy :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "6a3d26ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[18, 76,  5, 92,  7],\n",
+       "        [17, 66, 65, 50, 25],\n",
+       "        [18, 38, 13, 70, 25],\n",
+       "        [59, 42, 44, 14, 68]],\n",
+       "\n",
+       "       [[37, 52, 26, 25, 18],\n",
+       "        [19, 15, 69, 62, 21],\n",
+       "        [86, 49, 85, 61, 84],\n",
+       "        [27, 44, 98, 15, 13]],\n",
+       "\n",
+       "       [[32, 36, 70, 30,  5],\n",
+       "        [44, 12, 29,  2, 11],\n",
+       "        [23, 55, 72, 22, 71],\n",
+       "        [26, 78, 66, 47, 94]]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor.numpy()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "c41335a2",
+   "id": "4ae09eec",
    "metadata": {},
    "outputs": [
     {
@@ -343,9 +385,318 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c6ee0570",
+   "metadata": {},
+   "source": [
+    "reshape a tensor :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "2d13e1f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before reshape : \n",
+      "[[[ 25  83  12  99  14]\n",
+      "  [ 24  73  72  57  32]\n",
+      "  [ 25  45  20  77  32]\n",
+      "  [ 66  49  51  21  75]]\n",
+      "\n",
+      " [[ 44  59  33  32  25]\n",
+      "  [ 26  22  76  69  28]\n",
+      "  [ 93  56  92  68  91]\n",
+      "  [ 34  51 105  22  20]]\n",
+      "\n",
+      " [[ 39  43  77  37  12]\n",
+      "  [ 51  19  36   9  18]\n",
+      "  [ 30  62  79  29  78]\n",
+      "  [ 33  85  73  54 101]]]\n",
+      "\n",
+      "shape before reshape : (3, 4, 5)\n",
+      "\n",
+      "\n",
+      "After reshape : \n",
+      "[[ 25  83  12  99  14  24  73  72  57  32  25  45  20  77  32  66  49  51\n",
+      "   21  75]\n",
+      " [ 44  59  33  32  25  26  22  76  69  28  93  56  92  68  91  34  51 105\n",
+      "   22  20]\n",
+      " [ 39  43  77  37  12  51  19  36   9  18  30  62  79  29  78  33  85  73\n",
+      "   54 101]]\n",
+      "\n",
+      "shape after reshape : (3, 20)\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = tensor_add_1\n",
+    "\n",
+    "print( ('Before reshape : \\n{}').format(t.numpy() ))\n",
+    "print('\\nshape before reshape : {}\\n\\n'.format(t.get_shape() ) )\n",
+    "\n",
+    "t = tf.reshape(tensor = t, shape=[3 , 20])\n",
+    "\n",
+    "print( ('After reshape : \\n{}').format(t.numpy() ))\n",
+    "print('\\nshape after reshape : {}\\n\\n'.format(t.get_shape() ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "fd0ba2b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before reshape : \n",
+      "[[[ 25  83  12  99  14]\n",
+      "  [ 24  73  72  57  32]\n",
+      "  [ 25  45  20  77  32]\n",
+      "  [ 66  49  51  21  75]]\n",
+      "\n",
+      " [[ 44  59  33  32  25]\n",
+      "  [ 26  22  76  69  28]\n",
+      "  [ 93  56  92  68  91]\n",
+      "  [ 34  51 105  22  20]]\n",
+      "\n",
+      " [[ 39  43  77  37  12]\n",
+      "  [ 51  19  36   9  18]\n",
+      "  [ 30  62  79  29  78]\n",
+      "  [ 33  85  73  54 101]]]\n",
+      "\n",
+      "shape before reshape : (3, 4, 5)\n",
+      "\n",
+      "\n",
+      "After reshape : \n",
+      "[[[[ 25  83  12]\n",
+      "   [ 99  14  24]]\n",
+      "\n",
+      "  [[ 73  72  57]\n",
+      "   [ 32  25  45]]\n",
+      "\n",
+      "  [[ 20  77  32]\n",
+      "   [ 66  49  51]]\n",
+      "\n",
+      "  [[ 21  75  44]\n",
+      "   [ 59  33  32]]\n",
+      "\n",
+      "  [[ 25  26  22]\n",
+      "   [ 76  69  28]]]\n",
+      "\n",
+      "\n",
+      " [[[ 93  56  92]\n",
+      "   [ 68  91  34]]\n",
+      "\n",
+      "  [[ 51 105  22]\n",
+      "   [ 20  39  43]]\n",
+      "\n",
+      "  [[ 77  37  12]\n",
+      "   [ 51  19  36]]\n",
+      "\n",
+      "  [[  9  18  30]\n",
+      "   [ 62  79  29]]\n",
+      "\n",
+      "  [[ 78  33  85]\n",
+      "   [ 73  54 101]]]]\n",
+      "\n",
+      "shape after reshape : (2, 5, 2, 3)\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = tensor_add_1\n",
+    "\n",
+    "print( ('Before reshape : \\n{}').format(t.numpy() ))\n",
+    "print('\\nshape before reshape : {}\\n\\n'.format(t.get_shape() ) )\n",
+    "\n",
+    "# t = tf.reshape(tensor = t, shape=[2,2,3,5])\n",
+    "# t = tf.reshape(tensor = t, shape=[5,3,2,2])\n",
+    "t = tf.reshape(tensor = t, shape=[2,5,2,3])\n",
+    "\n",
+    "print( ('After reshape : \\n{}').format(t.numpy() ))\n",
+    "print('\\nshape after reshape : {}\\n\\n'.format(t.get_shape() ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "fec85ce7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__path__',\n",
+       " '__spec__',\n",
+       " '_sys',\n",
+       " 'boston_housing',\n",
+       " 'cifar10',\n",
+       " 'cifar100',\n",
+       " 'fashion_mnist',\n",
+       " 'imdb',\n",
+       " 'mnist',\n",
+       " 'reuters']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(tf.keras.datasets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5592731",
+   "metadata": {},
+   "source": [
+    "observing fashion mnist dataset :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "88ceb045",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "219fde6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fashion_mnist = tf.keras.datasets.fashion_mnist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "faad4067",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+      "29515/29515 [==============================] - 0s 2us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+      "26421880/26421880 [==============================] - 8s 0us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+      "5148/5148 [==============================] - 0s 0us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+      "4422102/4422102 [==============================] - 1s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "(training_image, training_label), (testing_image, testing_label) = fashion_mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "1bfdb1b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of dimensions of training samples : 3\n",
+      "dimensions of training samples : (60000, 28, 28)\n",
+      "\n",
+      "\n",
+      "number of dimensions of testing samples : 3\n",
+      "dimensions of testing samples : (10000, 28, 28)\n",
+      "\n",
+      "\n",
+      "number of dimensions of testing  labels : 1\n",
+      "dimensions of testing labels : (25000,)\n",
+      "\n",
+      "\n",
+      "number of dimensions of testing  labels : 1\n",
+      "dimensions of testing labels : (25000,)\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"number of dimensions of training samples : {}\".format(training_image.ndim))\n",
+    "print(\"dimensions of training samples : {}\\n\\n\".format(training_image.shape))\n",
+    "\n",
+    "print(\"number of dimensions of testing samples : {}\".format(testing_image.ndim))\n",
+    "print(\"dimensions of testing samples : {}\\n\\n\".format(testing_image.shape))\n",
+    "\n",
+    "print(\"number of dimensions of testing  labels : {}\".format(training_label.ndim))\n",
+    "print(\"dimensions of testing labels : {}\\n\\n\".format(training_label.shape))\n",
+    "\n",
+    "print(\"number of dimensions of testing  labels : {}\".format(testing_label.ndim))\n",
+    "print(\"dimensions of testing labels : {}\\n\\n\".format(testing_label.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "fd051dae",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "randint() missing 1 required positional argument: 'b'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [100]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mid\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandint\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure()\n\u001b[1;32m      8\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(training_image[\u001b[38;5;28mid\u001b[39m])\n",
+      "\u001b[0;31mTypeError\u001b[0m: randint() missing 1 required positional argument: 'b'"
+     ]
+    }
+   ],
+   "source": [
+    "# Visualize the first image from the training dataset\n",
+    "import matplotlib.pyplot as plt \n",
+    "import random\n",
+    "\n",
+    "id = random.randint((0,100))\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.imshow(training_image[id])\n",
+    "plt.colorbar()\n",
+    "plt.grid(False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38b2eae",
+   "id": "ae9b70b8",
    "metadata": {},
    "outputs": [],
    "source": []
