add list and dictionary comprehension examples in python basic practice week1

--- a/python_basic_practice/week1 : python basic/List and Dictionary Comprehension.ipynb
+++ b/python_basic_practice/week1 : python basic/List and Dictionary Comprehension.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6137147e",
+   "id": "11b40f43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1652d8ac",
+   "id": "b7d6b929",
    "metadata": {},
    "source": [
     "iterate through list without using list compreshension :"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a301ea88",
+   "id": "4c656cc4",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff57bfba",
+   "id": "700084bd",
    "metadata": {},
    "source": [
     "iterate through list elements using list compreshension :"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5ba9a634",
+   "id": "a3feae98",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fb7fd36d",
+   "id": "4bfff765",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e1f9b22",
+   "id": "b4313d22",
    "metadata": {},
    "source": [
     "nested list (list of lists) coprehension: using nested loop"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c285e316",
+   "id": "3a4a9fc9",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c215b81",
+   "id": "484605f8",
    "metadata": {},
    "source": [
     "nested list (list of lists) coprehension: using list coprehension"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "584abaa3",
+   "id": "fa8c7aee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af6a8a36",
+   "id": "d90d8c30",
    "metadata": {},
    "source": [
     "squaring each element in the matrix (list of lists) and stroring in a list: "
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d95c500f",
+   "id": "b34edd5f",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b6da791",
+   "id": "20173697",
    "metadata": {},
    "source": [
     "removing vowels from a text : (without using list comprehension)"
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cf306c9b",
+   "id": "ad645b74",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "218eae74",
+   "id": "bb903fed",
    "metadata": {},
    "source": [
     "removing vowels from a text : (without using list comprehension)"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2cb22ff1",
+   "id": "970e3b2e",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9d5825f",
+   "id": "8f28d330",
    "metadata": {},
    "source": [
     "iterate through dictionary without using dictionary coprehension : "
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2c5401f1",
+   "id": "8c40bbf7",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4acab531",
+   "id": "57994cdd",
    "metadata": {},
    "source": [
     "using dictionary coprehension : "
@@ -303,10 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f5b8bef3",
+   "execution_count": 15,
+   "id": "c87efe0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'Mango', 2: 'Pineapple', 3: 'Watermelon'}\n"
+     ]
+    }
+   ],
    "source": [
     "fruit_ranking = [1, 2, 3]\n",
     "\n",
@@ -316,6 +324,30 @@
     "\n",
     "print(fruit_ranking_dict)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d143ff1d",
+   "metadata": {},
+   "source": [
+    "# Reference :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a11c5f7d",
+   "metadata": {},
+   "source": [
+    "https://python.howtocode.dev/data-types/list-dict-comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b065a730",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
