--- a/Deep_Learning_practice/Week1/Basic Python/python3_intro_part_1.ipynb
+++ b/Deep_Learning_practice/Week1/Basic Python/python3_intro_part_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "41b2af60",
+   "id": "d019d36d",
    "metadata": {},
    "source": [
     "# Index\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f0539c0",
+   "id": "2d4ab4f1",
    "metadata": {},
    "source": [
     "# List"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f0710ae7",
+   "id": "cfd614b5",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2f61a700",
+   "id": "73e8e0d3",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "095e116b",
+   "id": "ee2351b0",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cfaf56d9",
+   "id": "2315c79b",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2159e837",
+   "id": "984baea8",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2b85e5c0",
+   "id": "28d20ccd",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c7894333",
+   "id": "0894c6c8",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "90b95b2b",
+   "id": "54539764",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6e5214e5",
+   "id": "486d34ab",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ecdb985f",
+   "id": "efda939e",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0d5ab658",
+   "id": "1a585760",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "55a6eb45",
+   "id": "e40d6dd6",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6241af06",
+   "id": "c71efcc2",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "314b2c4b",
+   "id": "a459aaf6",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cb879df6",
+   "id": "9d2823cc",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "26bf89a1",
+   "id": "d14dc04c",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4051571c",
+   "id": "3e3f14c2",
    "metadata": {},
    "source": [
     "# None type"
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "41097b93",
+   "id": "1506f25f",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c4994eca",
+   "id": "60dbeff7",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f7fb6385",
+   "id": "b3099238",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "97a2a19f",
+   "id": "4bd6056b",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e9174899",
+   "id": "b5088cc5",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "69a01921",
+   "id": "3297b854",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "cef9f515",
+   "id": "0d2a3218",
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e0205f4b",
+   "id": "fcaa77b1",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3b65cb73",
+   "id": "728a952b",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "04791069",
+   "id": "dd7f5cb4",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c3dd4f83",
+   "id": "71d9e3b9",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f9044c",
+   "id": "47772259",
    "metadata": {},
    "source": [
     "# Dictionary"
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a8611c12",
+   "id": "cabd96c3",
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "3942acde",
+   "id": "7876459c",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4b09f329",
+   "id": "472df63c",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "ab5bd65f",
+   "id": "98af81ea",
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "8b05a26f",
+   "id": "a2ca4f7e",
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "76e6c1c0",
+   "id": "37a5554d",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "362d5bea",
+   "id": "320564c9",
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "a4ee057a",
+   "id": "588f4263",
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f2588fc6",
+   "id": "0ca8098f",
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c5947811",
+   "id": "48a5cce3",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4a22ac51",
+   "id": "63bcaaf1",
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "0e3f1536",
+   "id": "65906574",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "0422eae3",
+   "id": "e24efc0f",
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "4ef32aef",
+   "id": "fa6fd138",
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d78daa34",
+   "id": "2e291b9b",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "225e53ed",
+   "id": "06f1286d",
    "metadata": {},
    "source": [
     "# Tuple"
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "80af4303",
+   "id": "803dc024",
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "780f7d90",
+   "id": "1ac1d3d5",
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "459100fa",
+   "id": "2378dbf2",
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "bff6a89c",
+   "id": "de7061d7",
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "71bda21d",
+   "id": "f0971b2b",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "ca6758a2",
+   "id": "1a32f1b9",
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "f55417aa",
+   "id": "020e827d",
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab208e28",
+   "id": "a19a4e68",
    "metadata": {},
    "source": [
     "# Set"
@@ -1272,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "7fa16731",
+   "id": "9219dd04",
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "bf01e073",
+   "id": "1aa6a5dd",
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "14ca0fe0",
+   "id": "3e6b77f4",
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b3a32bcb",
+   "id": "8c023c38",
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "52ce3f83",
+   "id": "08da0d16",
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1375,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "8364a966",
+   "id": "1fbb9c28",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1c300ea2",
+   "id": "5c09d161",
    "metadata": {},
    "outputs": [
     {
@@ -1630,16 +1630,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adfe9e96",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "7232e67b",
+   "id": "71896793",
    "metadata": {},
    "source": [
     "# Reference : \n",
     "\n",
     "https://learnpython.com/blog/python-custom-sort-function/\n",
     "\n",
-    "https://python.maateen.me/docs/"
+    "https://python.maateen.me/docs/\n",
+    "\n",
+    "https://www.kaggle.com/learn/python\n",
+    "\n",
+    "https://automatetheboringstuff.com/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abb9d1fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
