add python generator and file manipulation notebook in Deep Learning_practice

--- a/Deep_Learning_practice/Week1/Basic Python/python3_intro_part_4_file_io_and_exception_basic.ipynb
+++ b/Deep_Learning_practice/Week1/Basic Python/python3_intro_part_4_file_io_and_exception_basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "11eb56cf",
+   "id": "d3210d55",
    "metadata": {},
    "source": [
     "# Index\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa851f7",
+   "id": "fbd47a73",
    "metadata": {},
    "source": [
     "# File manipulation"
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "45c4a0da",
+   "id": "0946864f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "903c7834",
+   "id": "8b30e161",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c7b3fca2",
+   "id": "eb6b7af3",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e21f4071",
+   "id": "861ad392",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "af23a852",
+   "id": "e49e4083",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8908bb12",
+   "id": "fa9dbb25",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4bdbdd5f",
+   "id": "afd2db9f",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "02446d1f",
+   "id": "7dc8fefb",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f79343ea",
+   "id": "c67a3129",
    "metadata": {},
    "source": [
     "# Python Standered Modules\n",
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c3a343ff",
+   "id": "530a133b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ff73109a",
+   "id": "27a7b1a3",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "50b8f7ca",
+   "id": "ba17897d",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "96058aa2",
+   "id": "cef98590",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e602be33",
+   "id": "6f65a001",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ccccccb3",
+   "id": "4d07b2c1",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a93faa3e",
+   "id": "429998e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5e608188",
+   "id": "728c84b4",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "3b09ab7c",
+   "id": "05a2576c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f2ee4eac",
+   "id": "773b260a",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "70760770",
+   "id": "7dff037d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "eaa48665",
+   "id": "0121c2b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "bdf21c51",
+   "id": "33c2e29f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47acfd13",
+   "id": "e45f1caa",
    "metadata": {},
    "source": [
     "# glob"
@@ -486,14 +486,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "520d1a8b",
+   "id": "e7a500e0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b55b81b3",
+   "id": "03e48b27",
    "metadata": {},
    "source": [
     "# shutil"
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bd18a463",
+   "id": "85162eed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53596f42",
+   "id": "2777da28",
    "metadata": {},
    "source": [
     "# try catch block : "
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "fa9e37ab",
+   "id": "3a25f6cd",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "97f9ec57",
+   "id": "e8c8cf85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "fbfab8f7",
+   "id": "6d8669dc",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d6f4631",
+   "id": "fd4844c1",
    "metadata": {},
    "source": [
     "# Resource\n",
@@ -612,8 +612,17 @@
     "https://www.w3resource.com/python-exercises/file/\n",
     "\n",
     "https://docs.python.org/3/library/exceptions.html#concrete-exceptions\n",
-    "\n"
+    "\n",
+    "https://realpython.com/python-exceptions/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ebed5fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
