--- a/Deep_Learning_practice/Week2/numpy_intro.ipynb
+++ b/Deep_Learning_practice/Week2/numpy_intro.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "399664b2",
+   "id": "d7d71ea4",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a6fe45df",
+   "id": "32509e33",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4460bbd2",
+   "id": "d80c2791",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "096d4f83",
+   "id": "39e476fc",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0b63f87e",
+   "id": "3abd7a8c",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "79a419a3",
+   "id": "90c4ca85",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "78bca687",
+   "id": "3d4eeac2",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9146204c",
+   "id": "ec103abc",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2e97ed18",
+   "id": "62c84650",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "234c2802",
+   "id": "cebe6298",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e912de6e",
+   "id": "611914fe",
    "metadata": {},
    "outputs": [
     {
@@ -325,23 +325,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "7f7af1d9",
+   "execution_count": 24,
+   "id": "27cf9291",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "b = a.reshape(3, 4)"
+    "b = a.reshape(3, 4)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e43c1a10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c08adae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 12 into shape (3,3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [25]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43ma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 12 into shape (3,3)"
+     ]
+    }
+   ],
+   "source": [
+    "a.reshape(3, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5de59044",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = a.reshape(3, 4)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6170486c",
+   "metadata": {},
+   "source": [
+    "# Reference\n",
+    "\n",
+    "https://cs231n.github.io/python-numpy-tutorial/#numpy\n",
+    "\n",
+    "https://numpy.org/doc/stable/user/quickstart.html"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1573c7a5",
+   "id": "ac8e188b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "b"
-   ]
+   "source": []
   }
  ],
  "metadata": {
