modify Deep_Learning_practice README.md

--- a/Deep_Learning_practice/Week2/OpenCV/OpenCV_intro_0.ipynb
+++ b/Deep_Learning_practice/Week2/OpenCV/OpenCV_intro_0.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,12 +59,12 @@
    ],
    "source": [
     "img = cv2.imread('./img/messi.jpeg', cv2.IMREAD_GRAYSCALE)\n",
-    "print(image)"
+    "print(img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
