add image processing with pilow in Deep_Learning_practice/Week2

--- a/ML_practice/week3_part2/Decison_Tree/Decision_Tree_Classifier.ipynb
+++ b/ML_practice/week3_part2/Decison_Tree/Decision_Tree_Classifier.ipynb
@@ -743,8 +743,9 @@
     "\n",
     "The minimum number of samples required to split an internal node:\n",
     "\n",
-    "    - If int, then consider min_samples_split as the minimum number.\n",
-    "    - If float, then min_samples_split is a fraction and ceil(min_samples_split * n_samples) are the minimum number of samples for each split."
+    "   - If int, then consider min_samples_split as the minimum number.\n",
+    "   - If float, then min_samples_split is a fraction and \n",
+    "     ceil(min_samples_split * n_samples) are the minimum number of samples for each split."
    ]
   },
   {
