--- a/Deep_Learning_practice/Week6/Text_classification_from_scratch.ipynb
+++ b/Deep_Learning_practice/Week6/Text_classification_from_scratch.ipynb
@@ -638,6 +638,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extra codes for testing purpose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"This is a string which we want to vectorize\"\n",
+    "#max_features = 1 --> ValueError: If set, `max_tokens` must be greater than 1.\n",
+    "\n",
+    "max_features = 2\n",
+    "embedding_dim = 128\n",
+    "sequence_length = 5\n",
+    "\n",
+    "\n",
+    "vectorize_layer = TextVectorization(\n",
+    "    standardize=custom_standardization,\n",
+    "    max_tokens=max_features,\n",
+    "    output_mode=\"int\",\n",
+    "    output_sequence_length=sequence_length,\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tensorflow.python.keras.layers.preprocessing.text_vectorization.TextVectorization'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(vectorize_layer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<BatchDataset shapes: ((None,), (None,)), types: (tf.string, tf.int32)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(raw_train_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(625, shape=(), dtype=int64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(raw_train_ds.cardinality())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [31]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m text_batch, label_batch \u001b[38;5;241m=\u001b[39m raw_train_ds\u001b[38;5;241m.\u001b[39mtake(\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
+   "source": [
+    "text_batch, label_batch = raw_train_ds.take(1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
